Handle admin correctly